Not finished with PNR

--- a/bibliography/manual.bib
+++ b/bibliography/manual.bib
@@ -500,6 +500,15 @@ volume = 35,
 pages = {6847-6853},
 doi = {10.1103/PhysRevB.35.6847},
 }
+@article{Kass_1995_Bayes,
+author = {R. E. Kass and A. E. Raftery},
+title = {Bayes Factors},
+journal = {J. Am. Stat. Assoc.},
+year = 1995,
+volume = 90,
+pages = {773-795},
+doi = {10.2307/2291091},
+}
 @article{Kim_2002_Multi,
 author = {H. S. Kim and B. H. Sohn and W. Lee and J.-K. Lee and S. J. Choi and S. J. Kwon},
 title = {Multifunctional layer-by-layer self-assemlby of conducting polymers and magnetics nanoparticles},
@@ -987,6 +996,15 @@ year = 2012,
 volume = 9,
 pages = {676-571},
 doi = {10.1038/nmeth.2019},
+}
+@article{Schwarz_1978_Estim,
+author = {G. E. Schwarz},
+title = {Estimating the dimension of a model},
+journal = {Ann. Statist.},
+year = 1978,
+volume = 6,
+pages = {461-464},
+doi = {10.1214/aos/1176344136},
 }
 @article{Sears_1992_Neutr,
 author = {Varley F. Sears},
