Update of appendix stuff

--- a/components/closingpages/cv/cv.tex
+++ b/components/closingpages/cv/cv.tex
@@ -3,10 +3,10 @@
 \begin{document}
 	\section*{Curriculum Vitae}
 	\addcontentsline{toc}{chapter}{Curriculum Vitae}
-	\vspace{1cm}
+	% \vspace{1cm}
 	\Large\textbf{Dominique Hans Joseph Dresen} \\
 	\begin{table}[H]
-		\begin{tabular}{p{3.5cm}l}
+		\begin{tabular}{p{4.5cm}l}
 			Geburtsdatum/-ort & 15.03.1989 in D\"usseldorf\\
 			Staatsangehörigkeit & Deutsch\\
 		\end{tabular}
@@ -14,7 +14,7 @@
 
 	% \underline{\parbox{0.465\textwidth}{\hspace*{45mm}\Large{Ausbildung}}}\hspace{2mm}
 	\begin{table}[H]
-		\begin{tabular}{p{5cm}l}
+		\begin{tabular}{p{4.5cm}l}
 			02/2019						& Abgabe der Dissertation\\ \\
 
 			seit 11/2014 			& \textbf{Dissertation} Physikalische Chemie\\
@@ -43,9 +43,10 @@
 												& Note: 1,0\\ \\
 
 			10/2008 - 07/2009 & \textbf{Grundwehrdienst} \\
-												& Luftwaffe bei Germersheim \& Cochem \\ \\
+												& Luftwaffe an den Standorten Germersheim \& Cochem \\ \\
 
-			08/1999 - 08/2008 & \textbf{Abitur} Gymnasium Schwertstrasse Solingen \\
+			08/1999 - 08/2008 & \textbf{Abitur}\\
+												& am Gymnasium Schwertstrasse Solingen \\
 												& Note: 2,2\\
 			\end{tabular}
 	\end{table}
