--- a/components/closingpages/danksagung/danksagung.tex
+++ b/components/closingpages/danksagung/danksagung.tex
@@ -33,6 +33,7 @@
 	Stefan Roitsch additionally for performing the transmission electron microscopy measurements.
 
 	The colleagues Marc Effertz, Julian Seifert, Yeimy Martinez, Melissa Hess, Eric Roeben, Alexey Bushmelev, Sascha Sprott, Daniel Stadler and Kevin Graef are thanked for the good times and the discussions during lunch.
+	\\
 
-	At last I'd like to thank Almut for always being there for me and providing me with mental and emotional support at all stages of this work with the patience of an angel.
+	At last but not least I'd like to thank Almut for always being there for me and providing me with mental and emotional support at all stages of this work with the patience of an angel.
 \end{document}
