--- a/components/closingpages/personalBibliography/personalBibliography.tex
+++ b/components/closingpages/personalBibliography/personalBibliography.tex
@@ -9,9 +9,9 @@
 			\begin{tabular}{p{2cm}l}
 				2018 			& \textit{"Morphological and crystallographic orientation of hematite spindles}\\
 										  &	\textit{in applied magnetic field"}\\
-											& D. Zákutná, Y. Falke, D. Dresen, S. Prévost,\\
-											& P. Bender, D. Honecker, S. Disch\\
-											& \textit{Nanoscale} (submitted, 11.2018),\\ \\
+											& D. Zákutná, Y. Falke, D. Dresen, S. Prévost, P. Bender,\\
+											& D. Honecker, S. Disch\\
+											& \textit{Nanoscale} (accepted, 2019),\\ \\
 				07.2018 			& \textit{"New 2D and 3D Coordination Polymers by Dehydration of}\\
 											& $\ce{^{1}_{\infty}} [ \textit{M}^{\mathrm{II}} (\textit{tF}‐\mathrm{BDC})(\ch{H2O})_4]\, (\textit{M}^{\mathrm{II}}\,=\, \ch{Zn^{2+}}, \ch{Co^{2+}}, \ch{Ni^{2+}}$ \textit{and}\\
 											& $\textit{tF}‐\mathrm{BDC}^{2-}$ \textit{= Tetrafluoroterephthalate)"},\\
