Minor corrections all implemented

--- a/bibliography/manual.bib
+++ b/bibliography/manual.bib
@@ -1348,6 +1348,15 @@ volume = 25,
 pages = {3090-3094},
 doi = {10.1002/adma.201300595},
 }
+@article{Yu_2006_Nanot,
+author = {B. Yu and M. Meyyappan},
+title = {Nanotechnology: Role in emerging nanoelectronics},
+journal = {Solid-State Electronics},
+year = 2006,
+volume = 50,
+pages = {536-544},
+doi = {10.1016/j.sse.2006.03.028},
+}
 @article{Zutic_2004_Spint,
 author = {I. Zutic and J. Fabian and S. Das Sarma},
 title = {Spintronics: Fundamentals and applications},
