--- a/components/glossary/glossary.tex
+++ b/components/glossary/glossary.tex
@@ -1,44 +1,44 @@
 %math abbreviations
 \newglossaryentry{vector}{%
   name={\ensuremath{\vec{a} ,\, a ,\, \hat{a}}},
-  description={Three dim. vector \ensuremath{\vec{a}}, magnitude \ensuremath{a} and unit direction \ensuremath{\hat{a} = \vec{a}/a}}
+  description={three dim. vector \ensuremath{\vec{a}}, magnitude \ensuremath{a} and unit direction \ensuremath{\hat{a} = \vec{a}/a}}
 }
 \newglossaryentry{inc_ang}{%
   name={\ensuremath{\alpha_i}},
-  description={Incident angle}
+  description={incident angle}
 }
 \newglossaryentry{scat_ang}{%
   name={\ensuremath{\theta}},
-  description={Scattering angle}
+  description={scattering angle}
 }
 \newglossaryentry{inc_vec}{%
   name={\ensuremath{\vec{k}_i}},
-  description={Incoming wave vector}
+  description={incoming wave vector}
 }
 \newglossaryentry{out_vec}{%
   name={\ensuremath{\vec{k}_o}},
-  description={Outgoing wave vector}
+  description={outgoing wave vector}
 }
 \newglossaryentry{lSSD}{%
   name={\ensuremath{L_\mathrm{SSD}}},
-  description={Sample-to-detector distance}
+  description={sample-to-detector distance}
 }
 \newglossaryentry{lCSD}{%
   name={\ensuremath{L_\mathrm{CSD}}},
-  description={Collimation-to-sample distance}
+  description={collimation-to-sample distance}
 }
 \newglossaryentry{magmom}{%
   name={\ensuremath{\vec{\mu}}},
-  description={Magnetic moment}
+  description={magnetic moment}
 }
 \newglossaryentry{FC}{
   name={FC},
-  description={Field cooled}
+  description={field cooled}
 }
 
 \newglossaryentry{ZFC}{
   name={ZFC},
-  description={Zero-field cooled}
+  description={zero-field cooled}
 }
 
 %exp. Methods
@@ -102,35 +102,35 @@
 %instruments
 \newglossaryentry{GALAXI}{
   name={GALAXI},
-  description={Instrument at the Forschungszentrum J\"ulich for SAXS, GISAXS and XRR}
+  description={instrument at the Forschungszentrum J\"ulich for SAXS, GISAXS and XRR}
 }
 \newglossaryentry{MARIA}{
   name={MARIA},
-  description={Neutron reflectometer at MLZ}
+  description={neutron reflectometer at MLZ}
 }
 \newglossaryentry{D17}{
   name={D17},
-  description={Neutron reflectometer at ILL}
+  description={neutron reflectometer at ILL}
 }
 \newglossaryentry{D22}{
   name={D22},
-  description={Small-angle neutron scattering instrument at ILL}
+  description={small-angle neutron scattering instrument at ILL}
 }
 \newglossaryentry{D33}{
   name={D33},
-  description={Small-angle neutron scattering instrument at ILL}
+  description={small-angle neutron scattering instrument at ILL}
 }
 \newglossaryentry{BM26B}{
   name={BM26B},
-  description={Small-angle X-ray scattering instrument at ESRF}
+  description={small-angle X-ray scattering instrument at ESRF}
 }
 \newglossaryentry{SuperADAM}{
   name={SuperADAM},
-  description={Neutron reflectometer at ILL}
+  description={neutron reflectometer at ILL}
 }
 \newglossaryentry{PPMS}{
   name={PPMS},
-  description={Physical property measurement system, used for magnetometry}
+  description={Physical Property Measurement System, used for magnetometry}
 }
 \newglossaryentry{MLZ}{
   name={MLZ},
