--- a/config/aliases.tex
+++ b/config/aliases.tex
@@ -13,9 +13,9 @@
 \newcommand{\refapp}[1]{\ensuremath{\mathrm{App.}\,\ref{#1}}}
 \newcommand{\unit}[1]{\,\mathrm{#1}}
 \newcommand{\etc}{\textit{etc}}
-\newcommand{\ie}{\textit{i.e.\,}}
-\newcommand{\eg}{\textit{e.g.\,}}
-\newcommand{\etal}{\textit{et al.\,}\,}
+\newcommand{\ie}{\textit{i.\,e.}~}
+\newcommand{\eg}{\textit{e.\,g.}~}
+\newcommand{\etal}{\textit{et\,al.}~}
 \renewcommand{\sin}{\mathrm{sin}}
 \renewcommand{\cos}{\mathrm{cos}}
 \renewcommand{\cot}{\mathrm{cot}}
