Update a bit CC

--- a/bibliography/manual.bib
+++ b/bibliography/manual.bib
@@ -268,6 +268,14 @@ volume = 85,
 pages = {014433},
 doi = {10.1103/PhysRevB.85.014433},
 }
+@article{Faure_2013_2Dto3,
+author = {B. Faure and E. Wetterskog and K. Gunnarsson and E. Josten and R. P. Hermann and T. Br\"uckel and J. W. Andreasen and F. Meneau and M. Meyer and A. Lyubartsev and L. Bergstr\"om and G. Salazar-Alvarez and P. Svedlindh},
+title = {2D to 3D crossover of the magnetic properties in ordered arrays of iron oxide nanocrystals},
+journal = {Nanoscale},
+year = 2013,
+volume = 5,
+doi = {10.1039/c2nr33013j},
+}
 @article{Fidler_2000_Micro,
 author = {Josef Fidler and Thomas Schrefl},
 title = {Micromagnetic modelling - the current state of the art},
