Updated some more

--- a/bibliography/manual.bib
+++ b/bibliography/manual.bib
@@ -652,6 +652,15 @@ volume = 70,
 pages = {954-964},
 doi = {10.1103/PhysRev.70.954},
 }
+@article{Lyon_1979_Tunne,
+author = {K. G. Lyon and G. L. Salinger and C. A. Swenson},
+title = {Tunneling models and the experimental thermal expansivities of fused silica and poly(methylmethacrylate) (PMMA) below 4 K},
+journal = {Phys. Rev. B},
+year = 1979,
+volume = 19,
+pages = {4231-4237},
+doi = {10.1103/PhysRevB.19.4231},
+}
 @article{Margulies_1997_Origi,
 author = {D. T. Margulies and F. T. Parker and M. L. Rudee and F. E. Spada and J. N. Chapman and P. R. Aitchison and A. E. Berkowitz},
 title = {Origin of the Anomalous Magnetic Behaviour in Single Cyrstal \ch{Fe3O4} Films},
@@ -705,6 +714,15 @@ year = 2012,
 volume = 28,
 pages = {7631-7638},
 doi = {10.1021/la3007052},
+}
+@article{Michel_1986_Therm,
+author = {P. Michel and J. Dugas and J. M. Cariou and L. Martin},
+title = {Thermal variations of refractive index of PMMA, polystyrene and poly(4-methyl-1-pentene},
+journal = {J. Macromol. Sci.},
+year = 1986,
+volume = 25,
+pages = {379-394},
+doi = {10.1080/00222348608248046},
 }
 @article{Miguez_1998_Contr,
 author = {H. Miguez and F. Meseguer and C. López and Á. Blanco and J. S. Moya and J. Requena and A. Mifsud and V. Fornés},
