Update a bit the ML intro

--- a/bibliography/manual.bib
+++ b/bibliography/manual.bib
@@ -34,6 +34,15 @@ volume = 11,
 pages = {7889-7900},
 doi = {10.1021/acsnano.7b02349},
 }
+@article{Anyfantakis_2015_Modul,
+author = {M. Anyfantakis and Z. Geng and M. Morel and S. Rudiuk and D. Baigl},
+title = {Modulation of the Coffee-Ring Effect in Particle/Surfactant Mixtures: the Importance of Particle−Interface Interactions},
+journal = {Langmuir},
+year = 2015,
+volume = 31,
+pages = {4113-4120},
+doi = {10.1021/acs.langmuir.5b00453},
+}
 @article{Aoyama_2012_Tenth,
 author = {Tatsumi Aoyama and Masashi Hayakawa and Toichiro Kinoshita and Makiko Nio},
 title = {Tenth-Order QED Contribution to the Electron g-2 and an Improved Value of the Fine Structure Constant},
@@ -250,6 +259,15 @@ volume = 14,
 pages = {013025},
 doi = {10.1088/1367-2630/14/1/013025},
 }
+@article{Dugyala_2014_Contr,
+author = {V. R. Dugyala and M. G. Basavaraj},
+title = {Control over Coffee-Ring Formation in Evaporating Liquid Drops Containing Ellipsoids},
+journal = {Langmuir},
+year = 2014,
+volume = 30,
+pages = {8680-8686},
+doi = {10.1021/la500803h},
+}
 @article{Embden_2015_TheHe,
 author = {Joel van Embden and Anthony S. R. Chesman and Jacek J. Jasieniak},
 title = {The Heat-Up Synthesis of Colloidal Nanocrystals},
@@ -372,6 +390,15 @@ volume = 39,
 pages = {4828-4830},
 doi = {10.1021/nn100869j},
 }
+@article{Deegan_1997_Capil,
+author = {R. D. Deegan and O. Bakajin and T. F. Dupont and G. Huber and S. R. Nagel and T. A. Witten},
+title = {Capillary flow as the cause of ring stains from dried liquid drops},
+journal = {Nature},
+year = 1997,
+volume = 389,
+pages = {827-829},
+doi = {10.1038/39827},
+}
 @article{Geng_2016_Highm,
 author = {B. Q. Geng and Y. Q. Ma and S. T. Xu and Y. F. Xu and X. Sun and Z. X. Dai and G. H. Zheng},
 title = {High magnetic performance of cobalt ferrite and anomalous magnetizing behaviour of \ch{CoFe2}/oxide derived from ferrite},
@@ -416,6 +443,15 @@ year = 2010,
 volume = 346,
 pages = {37-42},
 doi = {10.1016/j.jcis.2010.02.025},
+}
+@article{Han_2012_Learn,
+author = {W. Han and Z. Lin},
+title = {Learning from “Coffee Rings”: Ordered StructuresEnabled by Controlled Evaporative Self-Assembly},
+journal = {Angew. Chem. Int.},
+year = 2012,
+volume = 51,
+pages = {1534-1546},
+doi = {10.1002/anie.201104454},
 }
 @article{Hanneke_2011_Cavit,
 author = {D. Hanneke and S. Fogwell Hoogerheide and G. Gabrielse},
@@ -498,6 +534,15 @@ journal = {Journal of Applied Physics},
 year = 2005,
 pages = {10F306},
 doi = {10.1063/1.1852851},
+}
+@article{Kajiya_2009_Contr,
+author = {T. Kajiya and W. Kobayashi and T. Okuzono and M. Doi},
+title = {Controlling the Drying and Film Formation Processes of Polymer Solution Droplets with Addition of Small Amount of Surfactants},
+journal = {J. Phys. Chem. B},
+year = 2009,
+volume = 113,
+pages = {15460-15466},
+doi = {10.1021/jp9077757},
 }
 @article{Kannan_1987_Perco,
 author = {R. Kannan and Mohindar S. Seehra},
@@ -922,6 +967,15 @@ year = 2017,
 volume = 17,
 pages = {15-20},
 doi = {10.1021/acs.nanolett.6b02972},
+}
+@article{Rabideau_2007_Obser,
+author = {B. D. Rabideau and L. E. Pell and R. T. Bonnecaze and B. A. Korgel},
+title = {Observation of Long-Range Orientational Order in Monolayers of Polydisperse Colloids},
+journal = {Langmuir},
+year = 2007,
+volume = 23,
+pages = {1270-1274},
+doi = {10.1021/la062632q},
 }
 @article{Ramos_2007_Roomt,
 author = {A. V. Ramos and M.-J. Guittet and J.-B. Moussy and R. Mattana and C. Deranlot and F. Petroff and C. Gatel},
