Update abstract, titlepage and thanking pages

--- a/bibliography/manual.bib
+++ b/bibliography/manual.bib
@@ -36,7 +36,7 @@ doi = {10.1021/acsnano.7b02349},
 }
 @article{Anyfantakis_2015_Modul,
 author = {M. Anyfantakis and Z. Geng and M. Morel and S. Rudiuk and D. Baigl},
-title = {Modulation of the Coffee-Ring Effect in Particle/Surfactant Mixtures: the Importance of Particle−Interface Interactions},
+title = {Modulation of the Coffee-Ring Effect in Particle/Surfactant Mixtures: the Importance of Particle-Interface Interactions},
 journal = {Langmuir},
 year = 2015,
 volume = 31,
