--- a/components/abstract/abstractGerman.tex
+++ b/components/abstract/abstractGerman.tex
@@ -2,17 +2,17 @@
 \documentclass[\main/dresen_thesis.tex]{subfiles}
 \begin{document}
   % \addchap*{Kurzfassung}
-  Der kollektive Magnetismus wird für vier Arten magnetischer Nanostrukturen untersucht: lose gepackte Nanokugeln, Monolagen von langreichweitig geordneten Nanowürfeln in quadratischen Anordnungen, Doppelschichten der quadratischen Anordnungen mit nichtmagnetischem Zwischenmaterial variabler Dicke, so wie dreidimensionale kolloidale Kristalle aus Nanowürfeln.
-  Jede der Nanostrukturen wird untersucht, indem zunächst die nicht wechselwirkenden Nanoteilcheneigenschaften untersucht werden, welche durch Kleinwinkel Röntgen- und (polarisierter) Neutronenstreuung an verdünnten Dispersionen, sowie durch komplementäre Elektronenmikroskopie-, Röntgenbeugungs- und Magnetometrieexperimente bestimmt werden.
+  In dieser Arbeit werden die Effekte dipolarer Wechselwirkung auf die magnetischen Eigenschaften von selbstorganisierten Strukturen magnetischer Nanoteilchen diskutiert.
+  Da die magnetischen Eigenschaften der Nanoteilchen selbst bereits stark von denen ausgedehnter Materialien abweichen können, werden zunächst die nicht-wechselwirkenden Nanoteilchen in Dispersion charakterisiert bevor der Magnetismus innerhalb von Nanostrukturen untersucht wird.
+  Dies erlaubt unvoreingenommen Schlussfolgerungen ziehen zu können, welche Beobachtungen Interaktionseffekte sind und welche Effekte von den Nanoteilchen selbst ausgehen.
+
+  Der kollektive Magnetismus wird für vier verschiedene Arten magnetischer Nanostrukturen untersucht: lose gepackte Nanokugeln, Monolagen von langreichweitig geordneten Nanowürfeln in quadratischen Anordnungen, Doppelschichten der quadratischen Anordnungen mit nichtmagnetischem Zwischenmaterial variabler Dicke, so wie dreidimensionale kolloidale Kristalle aus Nanowürfeln.
+  Die nicht-wechselwirkenden Nanoteilcheneigenschaften werden durch Kleinwinkel Röntgen- und (polarisierter) Neutronenstreuung an verdünnten Dispersionen, sowie durch komplementäre Elektronenmikroskopie-, Röntgenbeugungs- und Magnetometrieexperimente bestimmt.
   Anschließend wird die Struktur und der Magnetismus der angeordneten Teilchen durch Kleinwinkel Streuung unter streifendem Einfall und Reflektometrie bestimmt.
-  Die Ergebnisse werden mit den nicht wechselwirkenden Nanoteilcheneigenschaften, sowie mit den Erwartungen für dipolare Wechselwirkung auf den ermittelten Längenskalen verglichen, um auf Effekte kollektiven Magnetismus zu schließen.
-  \\
+  Die Ergebnisse werden mit den Eigenschaften der nicht wechselwirkenden Nanoteilchen, sowie mit den Erwartungen für dipolare Wechselwirkung auf den ermittelten Längenskalen verglichen, um auf Effekte kollektiven Magnetismus zu schließen.
 
   Zur detaillierten Bewertung der strukturellen und magnetischen Eigenschaften der Nanoteilchen wird der Superball-Formfaktor eingeführt und für kubisch geformte Nanoteilchen angewandt, um die Abweichung von einer perfekten Würfelform durch abgerundete Oberflächen zu beschreiben.
   Es wird gezeigt, dass im Vergleich zum kugelförmigen oder kubischen Formfaktor in mehreren Fällen dies die beste Beschreibung der beobachteten Streudaten liefert.
-  Für die Diskussion der Monolagenstruktur wird ein verdampfungsgetriebenes Selbstorganisationsverfahren entwickelt, um eine weitreichende Ordnung für Ölsäure-beschichtete Nanoteilchen in einem zweidimensionalen Gitter zu erreichen.
-  Es wird gezeigt, dass das Verfahren auf die Herstellung von Doppelschichten ausgedehnt werden kann, indem es mit rotationsbeschichteten Zwischenlagen kombiniert wird, um eine erste systematische Untersuchung für dipolare Wechselwirkung zwischen Nanoteilchenschichten durchzuführen.
-
-  Die vier vorgestellten Studien zeigen die Stärke der Methode auf, bei der zunächst die Nanoteilcheneigenschaften aus der Dispersion bestimmt werden um anschließend Effekte aus Interpartikelwechselwirkungen in Nanostrukturen zu diskutieren.
-  Ebenso zeigen sie die Fallstricke auf, die berücksichtigt werden müssen, um unvoreingenommen Schlussfolgerungen ziehen zu können, welche Beobachtungen Interaktionseffekte sind und welche von den Nanoteilchen selbst ausgehen, welche bereits stark von den magnetischen Eigenschaften ausgedehnter Materialien abweichen können.
+  Für die Herstellung der Monolagenstruktur wird ein auf Verdampfung basierendes Selbstorganisationsverfahren entwickelt, um eine weitreichende Ordnung für Ölsäure-beschichtete Nanoteilchen in einem zweidimensionalen Gitter zu erreichen.
+  Es wird gezeigt, dass das Verfahren auf die Herstellung von Doppelschichten ausgedehnt werden kann, indem es mit homogenen Zwischenlagen kombiniert wird, um eine erste systematische Untersuchung für dipolare Wechselwirkung zwischen Nanoteilchenschichten durchzuführen.
 \end{document}
