--- a/components/titlepage/titlepage.tex
+++ b/components/titlepage/titlepage.tex
@@ -30,11 +30,11 @@
   \end{center}
 \end{titlepage}
 
-\newpage
+\cleardoublepage
 
 \pagenumbering{gobble}
 
-\vspace{2cm}
+\vspace*{\fill}
 
 \begin{tabular}{@{}ll}
   Berichterstatter/in: & Dr. Sabrina Disch \\
@@ -42,7 +42,7 @@
 \end{tabular}
 
 \medskip
-\vspace{2cm}
+\vspace{1cm}
 
 Tag der letzten mündlichen Prüfung: 25.03.2019
 
