--- a/dresen_thesis.tex
+++ b/dresen_thesis.tex
@@ -27,7 +27,7 @@
   % Abstract
   \addchap*{Abstract}
     \subfile{\main/components/abstract/abstract}
-  \addchap*{Kurzfassung}
+  \addchap*{Kurzzusammenfassung}
     \subfile{\main/components/abstract/abstractGerman}
 
   \cleardoublepage
