--- a/components/abstract/abstract.tex
+++ b/components/abstract/abstract.tex
@@ -1,17 +1,18 @@
 \providecommand{\main}{../..}
 \documentclass[\main/dresen_thesis.tex]{subfiles}
 \begin{document}
-  The collective magnetism is studied for four type of magnetic nanostructures: loosely packed nanospheres, monolayers of long-range ordered nanocubes in square arrays, double layers of said nanocubes in square arrays with non-magnetic spacer material of variable thickness in between, and at last three-dimensional colloidal crystals of nanocubes.
-  Each nanostructure is studied by first discussing the non-interacting nanoparticle properties as is determined by small-angle X-ray and (polarized) neutron scattering on dilute dispersions, as well as complimentary electron microscopy, X-ray diffraction and vibrating sample magnetometry experiments.
-  Then the structure and magnetism of the arranged particles is resolved by grazing-incident small-angle scattering and reflectometry.
+
+  The effects of dipolar interparticle interaction on the magnetic properties of self-assembled structures of magnetic nanoparticles are studied in this thesis.
+  As the magnetic properties of the individual nanoparticles can already greatly differ from bulk material, the presented studies proceed to first determine the non-interacting nanoparticle properties from dispersion before the magnetism in nanostructures is discussed.
+  This allows to make unbiased conclusions onto which observations are an interaction effect in the sample and which are an effect from the individual nanoparticles.
+
+  The collective magnetism is studied for four different types of magnetic nanostructures: loosely packed nanospheres, monolayers of long-range ordered nanocubes in square arrays, double layers of nanocubes in square arrays with non-magnetic spacer material of variable thickness in between, and at last three-dimensional colloidal crystals of nanocubes.
+  The non-interacting nanoparticle properties are determined by small-angle X-ray and (polarized) neutron scattering on dilute dispersions, as well as complimentary electron microscopy, X-ray diffraction and vibrating sample magnetometry experiments.
+  Then the structure and magnetism of the arranged particles is resolved by grazing-incidence small-angle scattering and reflectometry.
   The results are compared with the nanoparticle properties in dispersion, as well as with expectations of dipolar interaction for the nanoparticles on the determined interparticle distances, to conclude on collective magnetic effects.
-  \\
 
   For the detailed evaluation of the nanoparticle structural and magnetic properties, the superball form factor is introduced and used for the case of cubically shaped nanoparticles to account for the deviation from a perfect cube shape by rounded surfaces.
   It is shown that the superball form factor in comparison to the limiting cases of either a spherical or cubic form factor provides the best description of the observed scattering data in multiple cases.
-  For the discussion of the monolayer structure, an evaporation-driven self-assembly procedure to achieve long-range order for oleic acid-ligated nanoparticles into a two-dimensional lattice is developed.
-  It is shown that the method is capable to be extended to the preparation of double layers by combining the method with spin-coated inter layers, which is used to perform a first systematic study on interlayer dipolar interaction between nanoparticle layers.
-
-  The four presented studies show the strength of the method of exactly determining the single nanoparticle properties from dispersion for the discussion of interparticle interaction effects in nanostructures.
-  As well as the pitfalls that need to be considered to make unbiased conclusions on what is an interaction effect and what is an effect coming from the single nanoparticles, which can already greatly differ from bulk material magnetic properties themselves.
+  For the preparation of the monolayer structure, an evaporation-driven self-assembly procedure to achieve long-range order for oleic acid-ligated nanoparticles into a two-dimensional lattice is developed.
+  It is shown that the method is capable to be extended to the preparation of double layers by combining the method with homogeneous inter layers, which is used to perform a first systematic study on interlayer dipolar interaction between nanoparticle layers.
 \end{document}
