--- a/components/abstract/abstract.tex
+++ b/components/abstract/abstract.tex
@@ -4,7 +4,7 @@
 
   The effects of dipolar interparticle interaction on the magnetic properties of self-assembled structures of magnetic nanoparticles are studied in this thesis.
   As the magnetic properties of the individual nanoparticles can already greatly differ from bulk material, the presented studies proceed to first determine the non-interacting nanoparticle properties from dispersion before the magnetism in nanostructures is discussed.
-  This allows to make unbiased conclusions onto which observations are an interaction effect in the sample and which are an effect from the individual nanoparticles.
+  This allows to make unbiased conclusions onto which observations are an effect from interparticle interaction and which are an effect from the individual nanoparticles.
 
   The collective magnetism is studied for four different types of magnetic nanostructures: loosely packed nanospheres, monolayers of long-range ordered nanocubes in square arrays, double layers of nanocubes in square arrays with non-magnetic spacer material of variable thickness in between, and at last three-dimensional colloidal crystals of nanocubes.
   The non-interacting nanoparticle properties are determined by small-angle X-ray and (polarized) neutron scattering on dilute dispersions, as well as complimentary electron microscopy, X-ray diffraction and vibrating sample magnetometry experiments.
