--- a/components/abstract/abstractGerman.tex
+++ b/components/abstract/abstractGerman.tex
@@ -7,7 +7,7 @@
   Dies erlaubt unvoreingenommen Schlussfolgerungen ziehen zu können, welche Beobachtungen Interaktionseffekte sind und welche Effekte von den Nanoteilchen selbst ausgehen.
 
   Der kollektive Magnetismus wird für vier verschiedene Arten magnetischer Nanostrukturen untersucht: lose gepackte Nanokugeln, Monolagen von langreichweitig geordneten Nanowürfeln in quadratischen Anordnungen, Doppelschichten der quadratischen Anordnungen mit nichtmagnetischem Zwischenmaterial variabler Dicke, so wie dreidimensionale kolloidale Kristalle aus Nanowürfeln.
-  Die nicht-wechselwirkenden Nanoteilcheneigenschaften werden durch Kleinwinkel Röntgen- und (polarisierter) Neutronenstreuung an verdünnten Dispersionen, sowie durch komplementäre Elektronenmikroskopie-, Röntgenbeugungs- und Magnetometrieexperimente bestimmt.
+  Die nicht-wechselwirkenden Eigenschaften der Nanoteilchen werden durch Kleinwinkel Röntgen- und (polarisierter) Neutronenstreuung an verdünnten Dispersionen, sowie durch komplementäre Elektronenmikroskopie-, Röntgenbeugungs- und Magnetometrieexperimente bestimmt.
   Anschließend wird die Struktur und der Magnetismus der angeordneten Teilchen durch Kleinwinkel Streuung unter streifendem Einfall und Reflektometrie bestimmt.
   Die Ergebnisse werden mit den Eigenschaften der nicht wechselwirkenden Nanoteilchen, sowie mit den Erwartungen für dipolare Wechselwirkung auf den ermittelten Längenskalen verglichen, um auf Effekte kollektiven Magnetismus zu schließen.
 
