Add citation tremel bragg stacks

--- a/bibliography/manual.bib
+++ b/bibliography/manual.bib
@@ -1077,6 +1077,24 @@ volume = 9,
 pages = {676-571},
 doi = {10.1038/nmeth.2019},
 }
+@article{Schneider_2012_Engin,
+author = {D. Schneider and F. Liaqat and El H. El Boudouti and Y. El Hassouani and B. Djafari-Rouhani and W. Tremel and H.-J. Butt and G. Fytas},
+title = {Engineering the Hypersonic Phononic Band Gap of Hybrid Bragg Stacks},
+journal = {Nano Lett.},
+year = 2012,
+volume = 12,
+pages = {3101-3108},
+doi = {10.1021/nl300982d},
+}
+@article{Schneider_2013_Defec,
+author = {D. Schneider and F. Liaqat and El H. El Boudouti and O. El Abouti and W. Tremel and H-J. Butt and B. Djafari-Rouhani and G. Fytas},
+title = {Defect-Controlled Hypersound Propagation in Hybrid Superlattices},
+journal = {Phys. Rev. Lett.},
+year = 2013,
+volume = 111,
+pages = {164301},
+doi = {10.1103/PhysRevLett.111.164301},
+}
 @article{Schwarz_1978_Estim,
 author = {G. E. Schwarz},
 title = {Estimating the dimension of a model},
