--- a/bibliography/manual.bib
+++ b/bibliography/manual.bib
@@ -268,6 +268,14 @@ volume = 30,
 pages = {8680-8686},
 doi = {10.1021/la500803h},
 }
+@article{Eibagi_2012_Roleo,
+author = {N. Eibagi and J. J. Kan and F. E. Spada and E. E. Fullerton},
+title = {Role of Dipolar Interactions on the Thermal Stability of High-Density Bit-Patterned Media},
+journal = {IEEE Magnetic Letters},
+year = 2012,
+volume = 3,
+doi = {10.1109/LMAG.2012.2211864},
+}
 @article{Embden_2015_TheHe,
 author = {Joel van Embden and Anthony S. R. Chesman and Jacek J. Jasieniak},
 title = {The Heat-Up Synthesis of Colloidal Nanocrystals},
