[Correction][Style] Header Glossary, Titlepage Grammar

--- a/components/glossary/glossary.tex
+++ b/components/glossary/glossary.tex
@@ -3,6 +3,7 @@
 \begin{document}
   \section*{Glossary}
   \addcontentsline{toc}{chapter}{Glossary}
+  \markboth{Glossary}{}
 
 	\noindent \textbf{Abbreviations}
 	\begin{table}[H]
