Remove library from bibliography import.

--- a/bibliography.tex
+++ b/bibliography.tex
@@ -1,2 +1,2 @@
 \providecommand{\main}{./}
-\bibliography{\main/bibliography/manual, \main/bibliography/library}
+\bibliography{\main/bibliography/manual}
