[Correction] CC Nanoparticle SAS, compare power law to mass fractal

--- a/bibliography/manual.bib
+++ b/bibliography/manual.bib
@@ -79,6 +79,15 @@ volume = 21,
 pages = {3458-3468},
 doi = {10.1021/cm901033m},
 }
+@article{Beaucage_1995_Smalla,
+author = {G. Beaucage},
+title = {Small-Angle Scattering from Polymeric Mass Fractals of Arbitrary Mass-Fractal Dimension},
+journal = {J. Appl. Cryst.},
+year = 1996,
+volume = 29,
+pages = {134-146},
+doi = {10.1107/S0021889895011605},
+}
 @article{Bergmann_2005_Antif,
 author = {A. Bergmann and J. Grabis and B. P. Toperverg and V. Leiner and M. Wolff and H. Zabel and K. Westerholt},
 title = {Antiferromagnetic dipolar ordering in [\ch{Co_2 Mn Ge/V]_N} multilayers},
@@ -785,6 +794,15 @@ year = 1998,
 volume = 10,
 pages = {480-483},
 doi = {10.1002/(SICI)1521-4095(199804)10:6<480::AID-ADMA480>3.0.CO;2-Y},
+}
+@article{Mildner_1986_Smalla,
+author = {D. F. R. Mildner and P. L. Hall},
+title = {Small-angle scattering from porous solids with fractal geometry},
+journal = {J. Phys. D: Appl. Phys.},
+year = 1986,
+volume = 19,
+pages = {1535},
+doi = {10.1088/0022-3727/19/8/021},
 }
 @article{Mildner_2005_Arefr,
 author = {D. F. R. Mildner and B. Hammouda and S. R. Kline},
